--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/csci2720-project
+BACKEND_PORT=5000
+API_BASE_URL=http://localhost:5000/api
+JWT_SECRET=CSCI2720_2024R1_GROUP5
