--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
         "@testing-library/react": "^16.1.0",
         "@testing-library/user-event": "^14.5.2",
         "axios": "^1.7.9",
+        "js-cookie": "^3.0.5",
         "leaflet": "^1.9.4",
+        "md5": "^2.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-leaflet": "^4.2.1",
+        "react-leaflet-draw": "^0.20.4",
         "react-router": "^6.28.0",
         "react-router-dom": "^6.28.0",
         "react-scripts": "^5.0.1",
@@ -44,7 +48,9 @@
         ]
     },
     "devDependencies": {
+        "@types/js-cookie": "^3.0.6",
         "@types/leaflet": "^1.9.15",
+        "@types/md5": "^2.3.5",
         "@types/react": "^19.0.1",
         "@types/react-dom": "^19.0.1",
         "css-loader": "6.7",
