--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
         "@testing-library/react": "^16.1.0",
         "@testing-library/user-event": "^14.5.2",
         "axios": "^1.7.9",
+        "bootstrap": "^5.3.3",
         "js-cookie": "^3.0.5",
         "leaflet": "^1.9.4",
         "md5": "^2.3.0",
         "react": "^18.3.1",
+        "react-bootstrap": "^2.10.6",
         "react-dom": "^18.3.1",
         "react-leaflet": "^4.2.1",
         "react-leaflet-draw": "^0.20.4",
         "react-router": "^6.28.0",
+        "react-router-bootstrap": "^0.26.3",
         "react-router-dom": "^6.28.0",
         "react-scripts": "^5.0.1",
         "typescript": "^4.9.5"
@@ -53,6 +56,7 @@
         "@types/md5": "^2.3.5",
         "@types/react": "^19.0.1",
         "@types/react-dom": "^19.0.1",
+        "@types/react-router-bootstrap": "^0.26.6",
         "css-loader": "6.7",
         "eslint-webpack-plugin": "^3.2.0",
         "html-webpack-plugin": "^5.6.3",
