--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "on-headers": "^1.0.2"
+    "on-headers": "^1.0.2",
+    "xml2js": "^0.6.2"
   },
   "scripts": {
     "start": "node app.js",
