--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "create-data": "npm --prefix backend run create-data",
+    "update-data": "npm --prefix backend run update-data",
     "create-accounts": "npm --prefix backend run create-accounts",
     "create-accounts-with-force": "npm --prefix backend run create-accounts-with-force",
     "start": "concurrently \"npm --prefix backend start\" \"npm --prefix frontend start\"",
