--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "md5": "^2.3.0",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.6",
+        "react-bootstrap-icons": "^1.11.5",
         "react-dom": "^18.3.1",
         "react-leaflet": "^4.2.1",
         "react-leaflet-draw": "^0.20.4",
