Update license from GPL-3.0 to AGPL-3.0

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@
 MONGO_URI=mongodb://localhost:27017/csci2720-project
 BACKEND_PORT=3001
 JWT_SECRET=CSCI2720_2024R1_GROUP5
-FRONTEND_URL=http://localhost:3000
+# FRONTEND_URL=http://localhost:3000
